# AucRobotics

Day1/Tasks/image/: RosSetup
Day2/Tasks/script/: test.sh
Day2/Tasks/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Project  a.out  cmake_install.cmake  name.cpp  name.py
Day3/Tasks/AUC-Robotics-Summer-Camp/Day3/catkin_ws/src/ball_chaser/: CMakeLists.txt
Day3/Tasks/AUC-Robotics-Summer-Camp/Day3/catkin_ws/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
Day3/Tasks/AUC-Robotics-Summer-Camp/Day3/catkin_ws/src/my_robot/: package.xml
Day3/Tasks/salah_ws/devel/: .catkin  .rosinstall
Day3/Tasks/salah_ws/devel/lib/pkg/: name
Day3/Tasks/salah_ws/devel/lib/pkgconfig/: pkg.pc  roscamp.pc
Day3/Tasks/salah_ws/devel/share/pkg/cmake/: pkgConfig.cmake
Day3/Tasks/salah_ws/src/pkg/: CMakeLists.txt  package.xml
Day3/Tasks/salah_ws/src/pkg/script/: name.py
Day3/Tasks/salah_ws/src/pkg/src/: name.cpp
Day3/Tasks/salah_ws/src/roscamp/: CMakeLists.txt  package.xml
Day3/Tasks/salah_ws/src/roscamp/src/: file.cpp  file.py
Day3/Tasks/src/: a.out  probability.cpp
Day4/Tasks/catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
Day4/Tasks/catkin_ws/devel/include/light_robot/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Person.h  auc.h  messages.h  word.h  wordRequest.h  wordResponse.h
Day4/Tasks/catkin_ws/devel/lib/light_robot/: add_two_ints_client  add_two_ints_server  listener  msg_pub  msg_sub  talker  word_srv_client  word_srv_server
Day4/Tasks/catkin_ws/devel/lib/pkgconfig/: light_robot.pc
Day4/Tasks/catkin_ws/src/light_robot/: CMakeLists.txt  package.xml
Day4/Tasks/catkin_ws/src/light_robot/msg/: auc.msg  messages.msg
Day4/Tasks/catkin_ws/src/light_robot/scripts/: msg_pub.py  msg_sub.py  pub.py  sub.py  word_srv_client.py  word_srv_server.py
Day4/Tasks/catkin_ws/src/light_robot/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  msg_pub.cpp  msg_sub.cpp  publisher.cpp  subscriber.cpp  word_srv_client.cpp  word_srv_server.cpp
Day4/Tasks/catkin_ws/src/light_robot/srv/: word.srv  word2.srv
Day5/Tasks/gazebo_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Day5/Tasks/gazebo_ws/devel/lib/pkgconfig/: gazebo_pkg.pc
Day5/Tasks/gazebo_ws/src/gazebo_pkg/: CMakeLists.txt
Day5/Tasks/gazebo_ws/src/gazebo_pkg/world/: FirstFantasy  MyWorld
(+60 files in other folders)
